MDEV-13458: Wrong result for aggregate function with distinct clause when the value for tmp_table_size is small

Fixed by making sure that the sort buffer would have atleast MERGEBUFF2 keys.
Also fixed MDEV-13457 by making sure that an empty tree is never dumped to the disk